devops/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nie-otchitame
  labels:
    app.kubernetes.io/name: nie-otchitame
    app.kubernetes.io/component: namespace
