devops/k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: nie-otchitame
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
