devops/k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: nie-otchitame
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
